<resources>
    <string name="app_name">TetrisGame</string>
    <string name="game_name">俄罗斯方块</string>
    <string name="game_score">游戏分数</string>
    <string name="default_score">0</string>
    <string name="game_time">游戏时间</string>
    <string name="default_time">00:00</string>
    <string name="game_over">游戏结束</string>
    <string name="game_over_lable">您一共获得了:%1$s分 共耗时:%2$d秒</string>
    <string name="finish_game">结束游戏</string>
    <string name="start_game">重新开始</string>
</resources>
